testdata/baselines/reference/submodule/compiler/javascriptThisAssignmentInStaticBlock.errors.txt
/src/a.js(3,14): error TS2339: Property 'doSomething' does not exist on type 'typeof Thing'.
/src/a.js(7,7): error TS2339: Property 'doSomething' does not exist on type 'typeof Thing'.


==== /src/a.js (2 errors) ====
    class Thing {
        static {
            this.doSomething = () => {};
                 ~~~~~~~~~~~
!!! error TS2339: Property 'doSomething' does not exist on type 'typeof Thing'.
        }
    }
    
    Thing.doSomething();
          ~~~~~~~~~~~
!!! error TS2339: Property 'doSomething' does not exist on type 'typeof Thing'.
    
    // GH#46468
    class ElementsArray extends Array {
        static {
            const superisArray = super.isArray;
            const customIsArray = (arg)=> superisArray(arg);
            this.isArray = customIsArray;
        }
    }
    
    ElementsArray.isArray(new ElementsArray());